# AoC-2025

./: .gitignore  README.md  README.org
D1/: .gitignore  README.org  input.txt.license  input_50.txt.license  meson.build
D1/src/: main.cpp
D10/: .gitignore  README.md  tsconfig.json
D10/Part_One-Typescript/: .gitignore  package.json  package.json.license
D10/Part_One-Typescript/src/: index.ts
D10/Part_Two-Rust/: .gitignore  Cargo.toml
D10/Part_Two-Rust/src/: main.rs
D10/src/: index.ts
D11/: .gitignore  D11.nimble  README.md
D11/src/: D11.nim
D12/: .gitignore  README.rst  environment.yml  input.txt.license  pyproject.toml
D12/src/D12/: __main__.py
D2/: .gitignore  README.md  README.org  nob.c  nob.h
D2/src/: AoC-2025_D2.c
D3/: .gitignore  README.org  dub.json  dub.json.license
D3/source/: app.d
D4/: .gitignore  README.org  draft.py  main.asm
D5/: README.org  aoc2025-d5.scm
D6/: README.org
D6/AoC2025_D6/: Project.toml
D6/AoC2025_D6/src/: AoC2025_D6.jl
D7/: .gitignore  README.md  build.zig  build.zig.zon
D7/src/: main.zig  root.zig
D8/: README.md
D8/aoc_d8/: .gitignore  alire.toml  aoc_d8.gpr
D8/aoc_d8/src/: aoc_d8.adb
D9/: .gitignore  Makefile  README.md  README.org
D9/AAA/: a.scm
D9/src/: aoc_d9.scm
