# SPDX-FileCopyrightText: 2025 Germán Caggianese <german.caggianese@pm.me>
#
# SPDX-License-Identifier: Apache-2.0

project(
  'AoC-2025_D1',
  'cpp',
  version : '0.1.0',
  meson_version : '>= 1.3.0',
  default_options : ['warning_level=3', 'cpp_std=c++20'],
)

dependencies = [
]

exe = executable(
  'AoC-2025_D1',
  'src/main.cpp',
  install : true,
  dependencies : dependencies,
)

test('basic', exe)
